apps/excalidraw/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: excalidraw
  namespace: excalidraw
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
    external-dns.alpha.kubernetes.io/target: "homelab-tunnel.lajas.tech"
spec:
  parentRefs:
  - name: public-gateway
    group: gateway.networking.k8s.io
    kind: Gateway
    namespace: kube-system
    sectionName: https
  hostnames:
  - draw.lajas.tech
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /
    backendRefs:
    - group: ""
      kind: Service
      name: excalidraw
      port: 80
      weight: 1
